fix: set default color for font to #333333 and change SectionWrapper mobile padding to 40px

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -45,7 +45,7 @@ $width-content-m: 320px;
 /* page padding */
 $padding-height-d: 100px;
 $padding-width-d: 120px;
-$padding-height-m: 24px;
+$padding-height-m: 40px;
 $padding-width-m: 32px;
 
 /* page margin */
